some alignment issues are sorted out

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   margin: 0;
   font-family: "Quicksand";
   box-sizing: border-box;
+  scroll-behavior: smooth;
   color: #333;
 }
 
@@ -26,9 +27,16 @@
   margin-left: 30px;
 }
 
-.navbar select {
+.navbar .left-nav {
   width: 100px;
   cursor: pointer;
+  margin-left: 10%;
+}
+
+.left-nav select {
+  width: 100px;
+  border: none;
+  padding: 5px 10px;
 }
 
 .nav-right {
@@ -49,23 +57,32 @@
 
 .card {
   background-color: transparent;
-  width: 270px;
+  width: 370px;
   height: 400px;
   border: 2px solid beige;
   margin: 10px;
   text-decoration: none;
   border-radius: 15px;
+  cursor: pointer;
+}
+
+.card:hover {
+  width: 380px;
+  background-color: yellow;
+  border: 1px solid black;
+  transition: 0.1s ease-in-out;
 }
 
 .card-image {
   background-color: transparent;
   margin-bottom: 15px;
   height: 180px;
+  width: 350px;
   background-size: cover;
 }
 
 .card-image img {
-  width: 180px;
+  width: 250px;
 }
 
 .input-fields {
@@ -79,13 +96,15 @@
 .input-fields button {
   background-color: black;
   color: white;
-  padding: 10px;
+  padding: 5px;
   border: none;
+  cursor: pointer;
   border-radius: 5px;
 }
 .input-fields input {
   border: 1px solid wheat;
-  padding: 10px;
+  padding: 8px;
+  border-radius: 8px;
 }
 
 .card-details {
@@ -93,6 +112,7 @@
   margin-top: 0;
   display: flex;
   flex-direction: column;
+  /* text-align: left; */
   padding: 5px;
 }
 .card-details a {
@@ -100,7 +120,7 @@
 }
 
 .card-details h2 {
-  text-align: center;
+  text-align: left;
   padding: 5px;
 }
 
